Bug 162926 - Value/text in the Microsoft Word form is not visible in LibreOffice 24.8.0
Summary: Value/text in the Microsoft Word form is not visible in LibreOffice 24.8.0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-09-11 18:44 UTC by Inna
Modified: 2024-09-13 11:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample Word Form (16.76 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-09-11 18:46 UTC, Inna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Inna 2024-09-11 18:44:49 UTC
Description:
The text doesn't appear when the Word form is opened in LibreOffice 24.8.0.


Steps to Reproduce:
1.Right click on the Word document 
2.Select Open with->LibreOffice Writer
3.Observe the empty space after the word 'Dear' 

Actual Results:
When the Word form is opened in LibreOffice 24.8.0, the text (Joan Jacinto) after the word "Dear" doesn't appear.

Expected Results:
The text (Joan Jacinto) entered in the form after the word "Dear" should be visible in the LibreOffice 24.8.0.


Reproducible: Always


User Profile Reset: No

Additional Info:
The Word document is attached to the bug.
Comment 1 Inna 2024-09-11 18:46:07 UTC
Created attachment 196388 [details]
Sample Word Form

Sample Word Form
Comment 2 Xisco Faulí 2024-09-11 19:37:56 UTC
Regression introduced by:

commit 6c2ab0f3ca440f6e10b438e6ee0e235cbe155216	[log]
author	Justin Luth <jluth@mail.com>	Thu Jun 06 19:05:29 2024 -0400
committer	Justin Luth <jluth@mail.com>	Fri Jun 07 12:41:15 2024 +0200
tree 992683bdf7d7036aef96b93cf42532d1bdf74d7d
parent 69dd3061882971d18bb07e829c20241916f26fc5 [diff]

tdf#100037 vml import: add AS_CHAR images to zOrder calculation
Comment 3 Justin L 2024-09-11 23:56:50 UTC
Interesting. This is compat15 and yet it has VML-ish stuff in it.

Note that when LO round-trips the document, the shape/text is visible again (because it is written as an image). Sadly, I can't see anything that distinguishes this shape from all the others that work. I'm guessing these are the activeX .bin objects.
Comment 4 Justin L 2024-09-12 14:51:32 UTC
SdrObject* pSdrObj = SdrObject::getSdrObjectFromXShape(xShape);
GetObjIdentifier is SdrObjKind::Graphic and GetObjInventor is SdrInventor::Default - neither of which is interesting.

SwTextBoxHelper::getOtherTextBoxFormat(xShape) is not true either. So I am rather puzzled by what it is disappearing behind...
Comment 5 Justin L 2024-09-12 15:17:53 UTC
There are two of these things. The "John Tan>" in the table shows up fine, but "Joan Jacinto" becomes invisible.

In LO, this is not a form.
In MS Word, these are editable text controls. I'm not sure what they are, but the properties says they are "Html Text" bits in "ThisDocument".

'Tools - Developer Tools" refer to these as "css::drawing::SvxShapeCollection" but at this point in the code xSInfo->getImplementationName() is simply "SwXShape". 

It looks like I'll just have to revert.
Comment 6 Inna 2024-09-12 17:07:29 UTC
Hi there, thanks for your investigation!

This is just a heads-up this Word document works correct way (the text is visible) in LibereOffice v7.6.5.

Please let me know to which version you'll be reverting.
Comment 7 Justin L 2024-09-12 18:51:53 UTC
Comment 2 identified that this started in 24.8. So that breaking change will be reverted in 25.2 and 24.8.
Comment 8 Inna 2024-09-12 18:56:48 UTC
perfect, please advise me once it's done and specify which version I can use. 

Will is still be 24.8.0?
Comment 9 Commit Notification 2024-09-13 01:46:30 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0125a92e0168646f1f0b5dfdaabb841eb6358a78

tdf#162926 Revert "tdf#100037 vml import: set fly-anchored AS_CHARs...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2024-09-13 01:46:35 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/343bfc6808320d435686527f3a28b88faa6a3398

tdf#162926 Revert "tdf#100037 vml import: add AS_CHAR images...

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2024-09-13 05:51:04 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/12c6c9166d3ba74e0c22253dd4d8e90a03800a82

tdf#162926 Revert "tdf#100037 vml import: set fly-anchored AS_CHARs...

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2024-09-13 05:51:09 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/679e61934c62744b43a60c73fc4f796d9de144dc

tdf#162926 Revert "tdf#100037 vml import: add AS_CHAR images...

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Justin L 2024-09-13 11:37:34 UTC
(In reply to Inna from comment #8)
> Will is still be 24.8.0?
It will be available in 24.8.2, which should be available one month from now. https://wiki.documentfoundation.org/ReleasePlan/24.8