tdf#162926 Revert "tdf#100037 vml import: set fly-anchored AS_CHARs...

...above fly's zOrder"

This reverts my 24.8 commit f714fb262ad8561afcababf4b7a97dedb1b72c15.

Some activeX binary (I assume) seemed to be composed of two parts
and yet didn't have a TextBox property, but when sent to the background
the textbox part of it disappeared.
I assume it was some kind of two-part monstrosity,
but nothing in the ServiceInfo indicated anything excludable.

Change-Id: I6e088a74e62db8b2bb732ba66e2cb3319b9c401e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173239
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins